--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -535,11 +535,11 @@
     <Compile Include="Reportes\Reporte_Ventana.Designer.cs">
       <DependentUpon>Reporte_Ventana.cs</DependentUpon>
     </Compile>
-    <Compile Include="Reportes\Ventanas_Reportes\ReportesClientes\ReporteListadoClientes.cs">
+    <Compile Include="Reportes\Ventanas_Reportes\ReportesClientes\ReporteClientes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Reportes\Ventanas_Reportes\ReportesClientes\ReporteListadoClientes.Designer.cs">
-      <DependentUpon>ReporteListadoClientes.cs</DependentUpon>
+    <Compile Include="Reportes\Ventanas_Reportes\ReportesClientes\ReporteClientes.Designer.cs">
+      <DependentUpon>ReporteClientes.cs</DependentUpon>
     </Compile>
     <Compile Include="Reportes\Ventanas_Reportes\ReportesFactura\ReporteListadoFacturas.cs">
       <SubType>Form</SubType>
@@ -777,9 +777,9 @@
     <EmbeddedResource Include="Reportes\Reporte_Ventana.resx">
       <DependentUpon>Reporte_Ventana.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesClientes\ListadoCliente.rdlc" />
-    <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesClientes\ReporteListadoClientes.resx">
-      <DependentUpon>ReporteListadoClientes.cs</DependentUpon>
+    <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesClientes\ReportClientes.rdlc" />
+    <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesClientes\ReporteClientes.resx">
+      <DependentUpon>ReporteClientes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesFactura\ListadoFactura.rdlc" />
     <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesFactura\ListadoDetalle.rdlc" />
@@ -861,7 +861,7 @@
     <None Include="Resources\xclipboard.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Reportes\Ventanas_Reportes\ReportesMarcasTarjeta\" />
+    <Folder Include="Reportes\Ventanas_Reportes\ReportesMarcaTarjeta\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\rstudio.png" />
