--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -541,11 +541,11 @@
     <Compile Include="Reportes\Ventanas_Reportes\ReportesClientes\ReporteClientes.Designer.cs">
       <DependentUpon>ReporteClientes.cs</DependentUpon>
     </Compile>
-    <Compile Include="Reportes\Ventanas_Reportes\ReportesFactura\ReporteListadoFacturas.cs">
+    <Compile Include="Reportes\Ventanas_Reportes\ReportesFactura\ReporteFacturas.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Reportes\Ventanas_Reportes\ReportesFactura\ReporteListadoFacturas.Designer.cs">
-      <DependentUpon>ReporteListadoFacturas.cs</DependentUpon>
+    <Compile Include="Reportes\Ventanas_Reportes\ReportesFactura\ReporteFacturas.Designer.cs">
+      <DependentUpon>ReporteFacturas.cs</DependentUpon>
     </Compile>
     <Compile Include="Reportes\Ventanas_Reportes\ReportesProductos\ReporteProductos.cs">
       <SubType>Form</SubType>
@@ -781,11 +781,10 @@
     <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesClientes\ReporteClientes.resx">
       <DependentUpon>ReporteClientes.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesFactura\ListadoFactura.rdlc" />
-    <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesFactura\ListadoDetalle.rdlc" />
-    <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesFactura\ReporteListadoFacturas.resx">
-      <DependentUpon>ReporteListadoFacturas.cs</DependentUpon>
+    <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesFactura\ReporteFacturas.resx">
+      <DependentUpon>ReporteFacturas.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesFactura\ReportFacturas.rdlc" />
     <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesProductos\ReporteProductos.resx">
       <DependentUpon>ReporteProductos.cs</DependentUpon>
     </EmbeddedResource>
